# langchain_customer_service_robot

./: .env.example  .gitignore  LICENSE  README_CN.md  README_EN.md  __init__.py  main.py  pyproject.toml  requirements.txt  run_web.py  start_web.bat
bot/: __init__.py  customer_service_bot.py
cli/: __init__.py  main.py
core/: __init__.py  agent_state.py  config.py
knowledge_base/: __init__.py  knowledge_base.py
knowledge_docs/: 电商客服服务手册.txt
retrievers/: __init__.py  hybrid_retriever.py
splitters/: __init__.py  semantic_splitter.py
storage/: __init__.py  conversation_storage.py  customer_database.py
templates/: index.html
tools/: __init__.py  customer_tools.py
web/: __init__.py  web_app.py
